@@ -15,7 +15,7 @@ XSUBPPARGS = -typemap $(PERL_CONF_privlibexp)/ExtUtils/typemap
 .xs.c:
 	$(XSUBPP) $(XSUBPPARGS) $< > $*.xsc && mv $*.xsc $*.c
 
-# bin_PROGRAMS=parsetexi
+bin_PROGRAMS=parsetexi
 xs_LTLIBRARIES = Parsetexi.la
 
 CLEANFILES += Parsetexi.c
@@ -68,7 +68,11 @@ Parsetexi_la_SOURCES= Parsetexi.c \
 		  errors.c errors.h \
 		  counter.c counter.h
 
-# parsetexi_SOURCES=$(libparsetexi_a_SOURCES) main.c
+parsetexi_SOURCES=$(Parsetexi_la_SOURCES) main.c
+parsetexi_CFLAGS = -DVERSION=\"$(VERSION)\" "-I$(PERL_INC)"
+
+# TODO: should -lpthread come from the Perl conf?
+parsetexi_LDFLAGS = $(AM_LDFLAGS) -lpthread
 
 
 BUILT_SOURCES=element_types.c element_types.h \
