@@ -1,3 +1,9 @@
+2016-06-13  Gavin Smith  <gavinsmith0123@gmail.com>
+
+	* Makefile.am (bin_PROGRAMS): Add an independent 'parsetexi' 
+	executable again.  This will be useful for finding bugs with 
+	valgrind. 
+
 2016-05-25  Gavin Smith  <gavinsmith0123@gmail.com>
 
 	* context_stack.c: Implement region stack.
